--- a/3e/Calcul littéral/Factoriser une expression littérale.html
+++ b/3e/Calcul littéral/Factoriser une expression littérale.html
@@ -1,12 +1,12 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateExprFact();
+        var nombre = Troisième_CalculLittéral.CreateExprFact();
 
          function recommencer() {
-            nombre = CreateExprFact();
+            nombre = Troisième_CalculLittéral.CreateExprFact();
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat").innerHTML = "";
             document.getElementById("TextReponse").innerHTML = "";
