--- a/3e/Equations/Résoudre une équation produit.html
+++ b/3e/Equations/Résoudre une équation produit.html
@@ -1,12 +1,12 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateEqProd();
+        var nombre = Troisième_Equations.CreateEqProd();
 
         function recommencer() {
-            nombre = CreateEqProd();
+            nombre = Troisième_Equations.CreateEqProd();
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat1").innerHTML = "";
             document.getElementById("TextReponse1").innerHTML = "";
