--- a/4e/Fractions/Additionner et soustraire des fractions.html
+++ b/4e/Fractions/Additionner et soustraire des fractions.html
@@ -1,9 +1,9 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var values = CreateAdd();
+        var values = Quatrième_Fractions.CreateAdd();
 
 
         function Valider() {
@@ -38,7 +38,7 @@
 
         function Recommencer() {
             Annuler();
-            values = CreateAdd();
+            values = Quatrième_Fractions.CreateAdd();
             document.getElementById("numerateur").innerHTML = values[0].toString();
             document.getElementById("denominateur").innerHTML = values[1].toString();
             document.getElementById("numerateur2").innerHTML = values[2].toString();
