--- a/4e/Proportionnalité/Identifier une situation de proportionnalité.html
+++ b/4e/Proportionnalité/Identifier une situation de proportionnalité.html
@@ -1,9 +1,9 @@
 ﻿﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var values = CreateSitProp();
+        var values = Quatrième_Proportionnalité.CreateSitProp();
 
 
         function Valider() {
@@ -26,7 +26,7 @@
 
         function Recommencer() {
             Annuler();
-            values = CreateSitProp();
+            values = Quatrième_Proportionnalité.CreateSitProp();
             document.getElementById("numerateur").innerHTML = values[0].toString();
             document.getElementById("denominateur").innerHTML = values[1].toString();
             document.getElementById("numerateur2").innerHTML = values[2].toString();
