--- a/3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers.html
+++ b/3e/Arithmétique/Décomposer un nombre en produits de facteurs premiers.html
@@ -2,12 +2,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateDecompBetween(100, 1000);
+        var nombre = Troisième_Arithmetique.CreateDecompBetween(100, 1000);
 
         function recommencer() {
-            nombre = CreateDecompBetween(100, 1000);
+            nombre = Troisième_Arithmetique.CreateDecompBetween(100, 1000);
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat").innerHTML = "";
             document.getElementById("TextReponse").innerHTML = "";
