--- a/3e/Equations/Résoudre une équation simple (de type ax=b).html
+++ b/3e/Equations/Résoudre une équation simple (de type ax=b).html
@@ -1,12 +1,12 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateEq1();
+        var nombre = Troisième_Equations.CreateEq1();
 
         function recommencer() {
-            nombre = CreateEq1();
+            nombre = Troisième_Equations.CreateEq1();
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat").innerHTML = "";
             document.getElementById("TextReponse").innerHTML = "";
