--- a/4e/Calcul littéral/Développer une expression littérale.html
+++ b/4e/Calcul littéral/Développer une expression littérale.html
@@ -1,12 +1,12 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateExprDev();
+        var nombre = Quatrième_CalculLittérale.CreateExprDev();
 
          function recommencer() {
-            nombre = CreateExprDev();
+            nombre = Quatrième_CalculLittérale.CreateExprDev();
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat").innerHTML = "";
             document.getElementById("TextReponse").innerHTML = "";
