--- a/4e/Nombres relatifs/Additionner et soustraire des nombres relatifs.html
+++ b/4e/Nombres relatifs/Additionner et soustraire des nombres relatifs.html
@@ -1,12 +1,12 @@
 ﻿<head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
-        var nombre = CreateAdd();
+        var nombre = Quatrième_NombresRelatifs.CreateAdd();
 
         function recommencer() {
-            nombre = CreateAdd();
+            nombre = Quatrième_NombresRelatifs.CreateAdd();
             document.getElementById("TextQuestion").innerHTML = nombre[0];
             document.getElementById("Resultat").innerHTML = "";
             document.getElementById("TextReponse").innerHTML = "";
