--- a/5e/Nombres relatifs/Calcul en ligne.html
+++ b/5e/Nombres relatifs/Calcul en ligne.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../../index.css">
     <script src="../../MenuSetup.js"></script>
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
     <script>
         var values;
         var param;
@@ -29,7 +29,7 @@
 
         function Recommencer() {
             Annuler();
-            values = GetCalculLigne(Randint(3,5));
+            values = Cinquième_NombresRlatifs.GetCalculLigne(Constante.Randint(3,5));
             document.getElementById("Calcul").innerHTML = values[0];
         }
 
