--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">
         <script src="MenuSetup.js"></script>
+        <script src="script.js"></script>
         <div style="position: relative; overflow: hidden; height: 296px;">
             <img src="BackgroundHead.png" class="imagecenter"
               alt="" title="Site Exerciseur" id="Titre"><br>
@@ -109,9 +110,5 @@
 
         <table class="colonnetable" id="TableMenu">
         </table>
-        
-        <div id="sfcux7ylj45wddnbkj95umlcr7kxgyrcjre" style="position: fixed; right: 0; bottom: 0;"></div>
-        <script type="text/javascript" src="https://counter7.stat.ovh/private/counter.js?c=ux7ylj45wddnbkj95umlcr7kxgyrcjre&down=async" async></script>
-        <br><noscript><a href="https://www.compteurdevisite.com" title="compteur web"><img src="https://counter7.stat.ovh/private/compteurdevisite.php?c=ux7ylj45wddnbkj95umlcr7kxgyrcjre" border="0" title="compteur web" alt="compteur web"></a></noscript>
     </body>
 </html>
